@@ -1,4 +1,7 @@
 
+2009-03-30 11:20 Ali aliov@xfce.org 
+	 * : Initializing gthread and dbus_g_thread+updates on TODO
+
 2009-03-29 19:46 Ali aliov@xfce.org 
 	 * : Prepare an alpha version of 0.8.0
 
